-04 CSS3 and Bootstrap osio tehty

--- a/labs/04 CSS3 and Bootstrap/csstest.html
+++ b/labs/04 CSS3 and Bootstrap/csstest.html
@@ -4,6 +4,7 @@
 <head>
     <title>Vintage Home Computers</title>
     <meta charset="utf-8" />
+    <link href="css/simple.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <article>
@@ -13,7 +14,9 @@
      <figure>    
         <img src="img/computer.png" alt="A computer with a monitor"/>
          <figcaption>Photo: Piotr Siedlecki, public domain via <a href="http://www.publicdomainpictures.net">http://www.publicdomainpictures.net</a>.</figcaption>
-    </figure> 
+         <p class="copyright_notice">Photo courtesy of Pekka Virtanen.</p>
+    </figure>
+        <p id="special">This is different from all other paragraphs</p>
     <h2>Novel uses</h2>
     <p>The main usage for a home computer was, of course, games. As cool games may not be a valid reason for purchasing an expensive gadget,
     a wide variety of potential uses were invented to satisfy those family members who might otherwise be sceptical.
