--- a/labs/05 HTML5 forms/form_skel.html
+++ b/labs/05 HTML5 forms/form_skel.html
@@ -6,58 +6,144 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Demonstrating HTML forms</title>
+		<link href="form.css" type="text/css" rel="stylesheet">
 	</head>
 	
 	<body>
-		<h1>Turnitin</h1>
-		<form  lang="fi" action="">
-			<div>
-				Name: <input type="text" name="studentname"/>
-			</div>
-			<div>
-				Student id: <input type="text" name="id"  />
-			</div>
-			<div>
-				Email:
-				<!--
-				Make an input named "email"
-				-->
-			</div>
-			<div>
-				Assignment:
-				<!--
-				Make an input named "assignment"
-				-->
-				
-			</div>
+		<fieldset>
+			<legend id="fieldTitle">Turnitin</legend>
+			<form  lang="fi" action="">
+				<fieldset>
+					<legend>Personal information</legend>
+					<div>
+						Name: <input type="text"
+									 name="studentname"
+									 required
+									 placeholder="Sylvester Stallone"
+									 oninvalid="this.setCustomValidity('Vem är du?')"
+									 oninput="this.setCustomValidity('')"/>
+					</div>
+					<div>
+						Student id: <input type="text"
+										   name="id"
+										   required
+										   placeholder="123456789"
+										   pattern="[0-9]{9}"
+										   oninvalid="this.setCustomValidity('Give me your ID (9-numbers)!')"
+										   oninput="this.setCustomValidity('')"/>
+					</div>
+					<div>
+						Email: <input type="text"
+									  name="email"
+									  required
+									  placeholder="sylvester.boy11@email.ru"
+									  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+									  oninvalid="this.setCustomValidity('SÄHKÖPOSTI NY PERKELE')"
+									  oninput="this.setCustomValidity('')"/>
+						<!--
+                        Make an input named "email"
+                        -->
+					</div>
+				</fieldset>
 
-			<div>
-				Code:
-				<!--
-				Make an input named "code" which is a text area to put student's code into.
-				-->
-				
-			</div>
-			<div>
-				Cheat:
-			<!--
-				Make an input named "cheat" which is a check box the student must check.
-			-->
-			</div>
-			<div>
-				Pay:
-			<!--
-				Make an input named "payment" which is a radio box with possible values of visa, paypal, mastercard
-			-->
-			</div>
-			<div>
-				Score:
-			<!--
-				Make an input named "score" which is a list of choices for the score 
-			-->
-			</div>
-			<input type="submit" />
-		</form>
+				<fieldset>
+					<legend>Chicki chicki check check</legend>
+					<div>
+						Assignment: <input type="text"
+										   name="assignment"
+										   required
+										   placeholder="Mathematics"
+										   oninvalid="this.setCustomValidity('palun sisesta oma ülesanne')"
+										   oninput="this.setCustomValidity('')"/>
+						<!--
+                        Make an input named "assignment"
+                        -->
+
+					</div>
+
+					<div>
+						Code: <input type="textarea"
+									 name="code"
+									 required
+									 placeholder="123"
+									 oninvalid="this.setCustomValidity('ASöflm2asg g21 4121')"
+									 oninput="this.setCustomValidity('')"/>
+						<!--
+                        Make an input named "code" which is a text area to put student's code into.
+                        -->
+
+					</div>
+					<div>
+						Cheat: <input type="checkbox"
+									  name="cheat"
+									  required
+									  oninvalid="this.setCustomValidity('Koodi?')"
+									  oninput="this.setCustomValidity('')"/>
+						<!--
+                            Make an input named "cheat" which is a check box the student must check.
+                        -->
+					</div>
+				</fieldset>
+
+				<fieldset>
+					<legend>Pay:</legend>
+					<div>
+						<label class="radio"><input type="radio"
+									  id="visa" class="radioInput"
+									  name="payment"
+									  value="visa"
+									  required/>Visa</label>
+						<label class="radio"><input type="radio"
+									  id="paypal" class="radioInput"
+									  name="payment"
+									  value="paypal"
+									  required/>Paypal</label>
+						<label class="radio"><input type="radio"
+									  id="mastercard" class="radioInput"
+									  name="payment"
+									  value="mastercard"
+									  required/>Mastercard</label>
+
+
+
+						<!--
+                            Make an input named "payment" which is a radio box with possible values of visa, paypal, mastercard
+                        -->
+					</div>
+				</fieldset>
+
+				<fieldset>
+					<legend>Score</legend>
+					<div>
+						Score:
+						<select name="score" required>
+							<option value="0">1-14</option>
+							<option value="1">15-20</option>
+							<option value="2">21-30</option>
+							<option value="3">31-40</option>
+							<option value="4">41-50</option>
+							<option value="5">51-60</option>
+							<option value="6">61-70</option>
+							<option value="7">71-80</option>
+							<option value="8">81-90</option>
+							<option value="9">91-100</option>
+							<option value="9999">+100????</option>
+						</select>
+						<!--
+                            Make an input named "score" which is a list of choices for the score
+                        -->
+					</div>
+				</fieldset>
+
+				<br>
+
+				<input class="submitButton" type="submit" />
+
+			</form>
+		</fieldset>
+
+
+		<br>
 		<a href="http://jigsaw.w3.org/css-validator/check/referer">Validate</a>
 	</body>
 </html>
