--- a/labs/07 JavaScript Language/simple_function.html
+++ b/labs/07 JavaScript Language/simple_function.html
@@ -12,8 +12,15 @@
     <!-- tasks.html -->
 	<form action="#" method="post" id="theForm">
 	    <fieldset><legend>Enter an Item To Be Done</legend>
+
 	        <div><label for="task">Task</label><input type="text" name="task" id="task" required></div>
+
 	        <input type="submit" value="Add It!" id="submit">
+
+			<input type="button"
+				   value="Remove duplicates"
+				   id="removeDuplicates">
+
 	  <div id="output"></div>
 	    </fieldset>
 	</form>
