--- a/labs/07 JavaScript Language/object_methods.html
+++ b/labs/07 JavaScript Language/object_methods.html
@@ -31,9 +31,7 @@ var fiat = {
 	drive: function() {
 		if (this.started) {
 			if (this.fuel > 0) {
-				console.log(this.make + " " +
-				      this.model + " goes zoom zoom!");
-				this.fuel = this.fuel - 1;
+                updateFuel(this);
 			} else {
 				console.log("Uh oh, out of fuel.");
 				this.stop();
@@ -47,6 +45,13 @@ var fiat = {
 		this.fuel = this.fuel + amount;
 	}
 };
+
+function updateFuel(car){
+    console.log(car.make + " " +
+        car.model + " goes zoom zoom!");
+    //this.fuel = this.fuel - 1;
+    car.fuel--;
+}
 
 fiat.start();
 fiat.drive();
